--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -34,15 +34,17 @@ h6 {
 }
 
 h1 {
-  margin-top: 0;
+  margin-top: 2.5em;
   font-size: $h-size-1;
 }
 
 h2 {
+  margin-top: 3em;
   font-size: $h-size-2;
 }
 
 h3 {
+  margin-top: 2em;
   font-size: $h-size-3;
 }
 
@@ -128,7 +130,7 @@ blockquote {
 a {
   /* a link 하이퍼링크 밑줄 없애기 */
   text-decoration: none;
-  
+
   &:focus {
     @extend %tab-focus;
   }
