--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -145,18 +145,15 @@ $medium: 768px !default;
 $medium-wide: 900px !default;
 $large: 1024px !default;
 $x-large: 1280px !default;
-$max-width: $x-large !default;
+$max-width: 1400px !default;
 
 /*
    Grid
    ========================================================================== */
 
-$right-sidebar-width-narrow: 150px !default;
-$right-sidebar-width: 200px !default;
-$right-sidebar-width-wide: 250px !default;
-// $right-sidebar-width-narrow: 200px !default;
-// $right-sidebar-width: 300px !default;
-// $right-sidebar-width-wide: 400px !default;
+$right-sidebar-width-narrow: 230px !default;
+$right-sidebar-width: 280px !default;
+$right-sidebar-width-wide: 330px !default;
 
 /*
    Other
